moved reqs added standards
Moves requirements text to module - more sensible as a location 
creates a new dir for releaseVersions and adds script and json to pull latest builds of dev tools
updated git ignore to avoid adding dev tools to the repo. Better to pull latest versions at start
update to toe file handle external dev tools

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ dev/dep/python/get-pip.py
 release/dep/python/get-pip.py
 get-pip.py
 
+# the external TD tools
+dev/td-modules/tools/releaseVersions/*
+
 # mac files
 *.DS_STORE
